# FCA-Consumer-Duty-Risk-Analysis

./: .gitignore  LICENSE  Quarterly-complaints-data-Q1-2025-26.xlsx  Quarterly-complaints-data-Q2-2025-26.xlsx  README.md  cli.py  config.yml  data_summary_salad_money_secure_open_banking_transaction_data.csv  io.py  pipeline.py  plots.py  pyproject.toml  requirements.txt  run_pipeline.py  scoring.py  test_scoring.py
